--- a/project/trial_project/restful-web-services/bin/src/main/resources/application.properties
+++ b/project/trial_project/restful-web-services/bin/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8181
 
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
